scripts/nullaway/annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8.txt
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:7: error: [NullAway] @NonNull field northNode not initialized
	private MazeNode northNode, southNode, eastNode, westNode;
	                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:7: error: [NullAway] @NonNull field southNode not initialized
	private MazeNode northNode, southNode, eastNode, westNode;
	                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:7: error: [NullAway] @NonNull field eastNode not initialized
	private MazeNode northNode, southNode, eastNode, westNode;
	                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:7: error: [NullAway] @NonNull field westNode not initialized
	private MazeNode northNode, southNode, eastNode, westNode;
	                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:69: error: [NullAway] dereferenced expression this.mazeRoom is @Nullable
		if(this.mazeRoom.enter())
		                ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeRoom.java:14: error: [NullAway] dereferenced expression enterBehavior is @Nullable
			if(enterBehavior.enter()){
			                ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeRoom.java:15: error: [NullAway] dereferenced expression winEffect is @Nullable
				winEffect.ApplyEffect();
				         ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeRoom.java:19: error: [NullAway] dereferenced expression loseEffect is @Nullable
			loseEffect.ApplyEffect();
			          ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeGame/Maze.java:10: error: [NullAway] @NonNull static field mainWindow not initialized
	public static JFrame mainWindow;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/GameOverLogic/GameOverObserver.java:25: error: [NullAway] initializer method does not guarantee @NonNull field highScores (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public GameOverObserver(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/GameOverLogic/HighScoresWindow.java:43: error: [NullAway] dereferenced expression parent is @Nullable
		parent.ClearHighScores();
		      ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestionFactory.java:25: error: [NullAway] dereferenced expression dbManager is @Nullable
			ResultSet rs = dbManager.getRandomTuple();
			                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaDatabaseManager.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields ids (line 13), s (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MovieTriviaDatabaseManager(){}
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestion.java:10: error: [NullAway] assigning @Nullable expression to @NonNull field
	private MovieTriviaQuestionPrompt prompt = null;
	                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestion.java:11: error: [NullAway] assigning @Nullable expression to @NonNull field
	private MovieTriviaAnswerSet answerSet = null;
	                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestion.java:47: error: [NullAway] dereferenced expression answerSet.getAnswer() is @Nullable
		return answerSet.getAnswer().equals(prompt.getSelection());
		                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/DefaultMazeParserTestCase.java:20: error: [NullAway] dereferenced expression test is @Nullable
		RoomType[][] m = test.getMaze();
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/GrantPointsEffectTestCase.java:16: error: [NullAway] dereferenced expression test is @Nullable
		int points = test.getPoints() + 5;
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/PlayerTestCase.java:9: error: [NullAway] @NonNull field test not initialized
	Player test;
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/UseKeyEffectTestCase.java:15: error: [NullAway] dereferenced expression test is @Nullable
		test.removeKey();
		    ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/DoorRoomEnterBehaviorTestCase.java:18: error: [NullAway] dereferenced expression test is @Nullable
		while(test.getKeys() != 0){
		          ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/EnumMazeTestCase.java:14: error: [NullAway] @NonNull field test not initialized
	EnumMaze test;
	         ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/DecreaseHealthEffectTestCase.java:15: error: [NullAway] dereferenced expression test is @Nullable
		int one = test.getHealth() - 1;
		              ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/IncreaseHealthEffectTestCCase.java:15: error: [NullAway] dereferenced expression test is @Nullable
		int health = test.getHealth() - 1;
		                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TestingPackage/GrantKeyEffectTestCase.java:15: error: [NullAway] dereferenced expression test is @Nullable
		int k = test.getKeys() + 1;
		            ^
    (see http://t.uber.com/nullaway )
../annotator/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/DataBaseBuilder.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static Statement  s = null;
	                          ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
